reordering z-index of toolbars/insertion points to prevent overlaps

--- a/src/block-globals.editor.scss
+++ b/src/block-globals.editor.scss
@@ -76,7 +76,7 @@
 }
 
 .block-editor-block-list__block>.block-editor-block-list__insertion-point {
-	z-index: 24;
+	z-index: 18;
 	height: 22px;
 	top: 0px;
 }
